--- a/data.html
+++ b/data.html
@@ -1,66 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
-<meta  name="viewport" content="width=device-width,initial-scale=1" >
-	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>  
-<!-- Latest compiled and minified CSS -->
+<title>ABOUT ME</title>
+<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-<!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<
    <link rel="icon" href="Images/logo.jpg" type="image/jpg"/>
-<title>data html</title>
-<style type="text/css" rel="stylesheet">
-h1{ 
-   color:white ;
- font-size:70px;
-	font-family: Broadway;
-	letter-spacing: 4px;
-	word-spacing: 2px;
-	word-wrap: break-word;
-	margin: 10px;
-	line-height: 70px;
-	border:3px solid gray;
-	background-color: #363a6a;
-	border-radius: 190px;
-	padding:5px 100px 5px 100px;
-	margin: 10px 50px 10px 50px;
-  }
-  h2{ 
-   color:white ;
- font-size:40px;
-	font-family: Broadway;
-	letter-spacing: 4px;
-	word-spacing: 2px;
-	word-wrap: break-word;
-	margin: 20px;
-	line-height: 40px;
-	border:3px solid gray;
-	background-color: #363a6a;
-	border-radius: 190px;
-	  padding:5px 100px 5px 100px;
-	margin: 150px 300px 100px 300px;
-  }
-	table {
-    border-collapse: collapse;
-		font-size:30px;
-		line-height:20px;
-    border-spacing: 0;
-    width: 100%;
-    border: 1px solid #ddd;
+<style type="text/css">
+h1{
+	color: white;
+background-color: #4158db;
+font-size: 100px;
+border-bottom: 3px solid black;
 }
-
-th, td {
-    border: none;
-    text-align: left;
-    padding: 8px;
+h2{
+	color: #804000;
+	text-align: center;
+	font-size: 60px;
+	font-family: arial;
 }
-	.button {
-    color: red;
+h3{
+	text-align: center;
+	font-size: 40px;
+	color: #804000;
+}
+.progress{
+	border-radius: 50px;
+}
+table{
+	font-size: 40px;
+}
+.study{
+	display: inline-block;
+	margin:40px 130px 40px 190px;
+}
+.box{
+	height: 500px;
+	background-color: #4158db;
+}
+button {
+    color: #e2360f;
   background-color: gray;
   font-weight: bold;
     border: 3px solid silver;
@@ -70,158 +51,72 @@ th, td {
     display: inline-block;
     font-size: 16px;
     margin:20px 20px 20px 20px;
-	}
-body{
-	background-size:cover;
-	background-repeat: no-repeat;
-	background-origin: 10px;
-	background-attachment: fixed;
-	margin: 10px;
-	border: 3px dotted black; 
-	margin: 10px 10px 10px 10px;
-	padding: 10px 10px 10px 10px;
-	overflow:scroll;
+   }
+p{
+	font-size: 20px;
+	color:  white;
 }
-  </style></head>	
-	  <body background="clg2.jpg">
-<div class="hero-image">
-<div class="hero-text">
-<div class="container-fluid">
-<div class="row">
-<div class="col-lg-12">
-  <center><h1><marquee>bio-data</marquee></h1></center>
-	</div>
-	</div>
-	</div>
-	</div>
-		  </div>
-<center><i><table class="table table-hover">  
-<div class="table-responsive"> 
-<div style="overflow-x:auto;">	
+</style>
+</head>
+<body>
+	<h1>About Me!...</h1>
+	<h2>Navaneetha Maha Vishnu.A </h2>
+	<center><img src="photo.png"></center>
+	<div class="study"> <a href="https://goo.gl/UfZbRo"><img src="phmss.jpg" ><h4>H.S.C and S.S.L.C Studied in Paavendhar,Thaviyakurichi ,Attur</h4></a></div>
+	<div class="study"><a href="www.ksrce.ac.in/"><img src="ksr.png" ><h4>Engineering Studing in KSRCE,Tiruchengode </h4></a></div>
+	<table class="table">
 <tr>
-<td>name</td>
-<td>Navaneethamahavishnu</td></dd>
-</tr></dl>
-<tr>
-<td>place</td>
-<td>thiruchengode</td>
-</tr>
-<tr>
-<td>age</td>
-<td>18year old</td>
-</tr>
-<tr>
-<td>date of birth</td>
-<td>13.10.1999</td>
-</tr>
-<tr>
-<td>blood group</td>
-<td>o+ve</td>
-</tr>
-<tr>
-<td>nationality</td>
-<td>indian</td>
-</tr>
-<tr>
-<td>hobbies</td>
-<td>reading books,drawing</td>
-</tr>
-<tr>
-  <td>10th,12th studied</td>
-<td>paavendhar matric hr.sec.school,attur</td>
-</tr>
-<tr>
-  <td>engineering studying</td>
-   <td>ksrce ,tiruchengode</td> 
-   </tr>                                                                      
-</table></i></center>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</table>
-  </center></h3></center>
-<body background="cont1.jpg">
-	<div class="hero-image>
-<div class="hero-text>
-	<div class="image">
-</div>
-<div class="container-fluid">
-<div class="row">
-<div class="col-xs-12">
-	<center><h1><marquee><i>contact</marquee></i></h1></center>
-<center><i><table class="table table-hover" >
-	<tr>
-		<th><img src="contact1.png"with="100px"height="100px"></th>
-		<th>9524180019</th>
-	</tr>
-	<tr>
-		<th><a href="https://www.facebook.com/navaneethan.navaneethan.5070276"><img src="face2.jpg" height="100px"with="100px"></th>
-		<th>Navaveethan Navaneethan</th>
-		
-	</tr>
-	<tr>
-		<th><a href="WhatsApp1.html"><img src="whatsapp.jpg"height="100px"with="100px"></th>
-		<th>9524180019</th>
-	</tr>
-	<tr>
-		<th><a href="https://www.google.com/gmail/"><img src="gmail.png"height="100px"with="100px"></th>
-		<th>navaneethavishnu322@gmailcom</th>
-	</tr>
-</table></i></center>
-
-</div>													  
-</div>
-</div>
-</div>
-<div class="container-fluid">
-<div class="row">
-<div class="col-xs-12">
-		<center><h1><marquee>education</marquee></h1></center>
-	<table class="table table-hover">
-<tr>
-  <td>10th marks(84%)</td>
-  <td><progress value="84" max="100"></progress></td>
+  <td>H.S.C(84%)</td>
+  <td><progress value="84" max="100" class="progress"></progress></td>
 </div>
 
 </tr>
-<td>12th marks(82%)</td>
-<td><progress value="82" max="100" content='989'> </progress></td>
+<td>S.S.L.C(82%)</td>
+<td><progress value="82" max="100" content='989' class="progress"> </progress></td>
 </tr>
 <tr>
 <td>1st semster(7.3)</td>
-<td><progress value="73" max="100" content="7.3"></progress></td>
+<td><progress value="73" max="100" content="7.3" class="progress"></progress></td>
 </tr>
 <tr>
 <td>2nd semester(7.7)</td>
-<td><progress value="77" max="100" height="50px" width="50px"></progress></td>
+<td><progress value="77" max="100" height="50px" width="50px" class="progress"></progress></td>
 </tr>
-</table></center>
-<center><h2><marquee>course completed</marquee></h2></center>
-<center><table class="table table-hover">
+</table>
+<h3>Programming</h3>
+<a href="https://www.codecademy.com/">
+	<center><img src="code.png"> <h4>Self Learn App</h4></center>
+</a>
+<table class="table table-hover">
 <tr>
   <td>html(100%)</td>
-  <td><progress value="100" max="100" width="50px" color ="blue" height="20px"></progress></td>
+  <td><progress value="100" max="100" class="progress"></progress></td>
 
 </tr>
 <td >css(100%)</td>
-<td><progress value="100" max="100" content='989'> </progress></td>
+<td><progress value="100" max="100" class="progress" > </progress></td>
 </tr>
 <tr>
 <td >java script(20%)</td>
-<td><progress value="20" max="100" content="7.3"></progress></td>
+<td><progress value="20" max="100" class="progress" ></progress></td>
 </tr>
 <tr>
 <td>c++(60%)</td>
-<td><progress value="60" max="100" content="7.7"></progress></td>
+<td><progress value="60" max="100" " class="progress"></progress></td>
 </tr>
+</table>
+<div class="box">
 </table></center>
-</div>
+<h3>My Details</h3>
+<p>Navaneethamahavishnu</p>
+<p>Born on:13,10,1999</p>
+<p>Coming from :Siruvachur(PO),Attur(TK),Salem(DT)</p>
+<p>Language Know:Tamil,English</p>
+<p>Intersted in:Web design,software devoploping</p>
+<p>hoppies:Reading,Playing Games</p>
+<p>skill:Programming development,Drawing</p>
+<h2>THANK YOU!....</h2>
+<center><a href="vishnunew"></a><button class="buttton">Back</button></center>
 </div>
 </body>
-<center><a href="vishnunew.html"><button class="button">home</button></a></center>
 </html>
