--- a/index.html
+++ b/index.html
@@ -22,12 +22,24 @@
    		background-size: cover;
    		
    	}
+    .button {
+    color: #e2360f;
+  background-color: gray;
+  font-weight: bold;
+    border: 3px solid silver;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin:20px 20px 20px 20px;
+   }
    </style>
 </head>
 <body>
 	<h1>Welcome</h1>
 	<h2>To</h2>
 	<h1>Official Page</h1>
-	<a href="vishnunew.html"><button >Click Hear!</button></a>
+	<center><a href="vishnunew.html"><button >Click Hear!</button></a></center>
 </body>
 </html>
