--- a/vishnunew.html
+++ b/vishnunew.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
@@ -9,56 +10,64 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    <link rel="icon" href="Images/logo.jpg" type="image/jpg"/>
 <style type="text/css">
-	h1{
-		text-align: center;
-    background-color:  #717a7c;
-		background-size: cover;
-		opacity: 0.9;
-		font-size: 90px;
-		font-family:Algerian;
-		font-style: italic;
+  h1{
+    opacity: 0.9;
+    color: #2b31db;
+    text-align: center;
+    background-color:  #a83200 ;
+    background-size: cover;
+    font-size: 90px;
+    font-family:Algerian;
     margin-bottom: 0px;
-    border-bottom: 2px solid black;
-	}
-	h2{
-		text-align: right;
-		font-size: 60px;
-		margin-right: 50px;
-	}
-	h3{
-		color: #1E41BD;
-		font-size: 70px;
-		font-family: Agency FB;
-		text-align: center;
-	}
-	.box{
-		background-image: url(box.jpg);
-		height:500px;
-		background-size: cover;
-		opacity: 0.7;
-		border-top: 1px solid black;
-	}
-	.box1{
-		display: inline-block;
-		border-top-left-radius: 60px;
-		border-bottom-right-radius: 60px;
-		background-color:white;
-		height:300px;
-		width: 300px;
-		border: 3px solid black;
-		margin-top:50px;
-		margin-left: 100px;
-		margin-right: 100px;
-		font-size: 20px;
-		text-align: center;
-	}
-	.box2{
-		height: 400px;
-		opacity: 0.9;
-		background-color: #717a7c;
+    border-bottom: 2px solid  #51c12c;
+  }
+  h2{
+    color: #2b31db;
+    text-align: right;
+    font-size: 60px;
+    margin-right: 50px;
+  }
+  h3{
+    color: #e8173d;
+    font-size: 70px;
+    font-family: Agency FB;
+    text-align: center;
+  }
+  h4{
+    text-align: center;
+    font-style: underline;
+
+  }
+  .box{
+    background-image: url(box.png);
+    height:700px;
+    background-size: cover;
+    opacity: 0.7;
+    border-top: 1px solid black;
+  }
+  .box1{
+    color: #1ca4ff;
+    display: inline-block;
+    border-top-left-radius: 60px;
+    border-bottom-right-radius: 60px;
+    background-color:white;
+    height:300px;
+    width: 300px;
+    border: 3px solid black;
+    margin-top:50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    font-size: 20px;
+    text-align: center;
+  }
+  .box2{
+    height: 400px;
+    opacity: 0.9;
+    background-color:#a83200;
     border-top: 4px solid black;
-	}
-   .button {
+    border-bottom: 4px solid black;
+  }
+   button {
     color: #e2360f;
   background-color: gray;
   font-weight: bold;
@@ -70,22 +79,37 @@
     font-size: 16px;
     margin:20px 20px 20px 20px;
    }
+   .social{
+    color: #1ca4ff;
+    display: inline-block;
+    margin:70px 100px 20px 100px;
+   }
+.marquee{
+  color: #1ca4ff;
+  background-color: #804000;
+  font-size: 30px;
+}
 </style>
 </head>
 <body>
-	<h1>VISHNU'S PAGE</h1>
-	    <div class="box"> 
-	        <h2>Success has</h2>
-	        <h2>No</h2>
-	        <h2>Time Limit</h2>
-	        <h3>Maha Vishnu</h3>
-	        <h3>Web Page creater</h3>
-	    </div>
-	    <div class="box2">
-	        <div class="box1">“It is the satisfaction of doing it for yourself and motivating others to work with you in bringing it about. It is about the fun, innovation, creativity with the rewards being far greater than purely financial.”</div>
-	        <div class="box1">“The reasonable man adapts himself to the world; the unreasonable one persists in trying to adapt the world to himself. Therefore all progress depends on the unreasonable man.”</div>
-	        <div class="box1"> பகை, பொறாமை ஆகியவற்றை நீ வெளியிட்டால், அவை வட்டியும் முதலுமாக மீண்டும் உன்னிடமே திரும்பி வந்து சேர்ந்துவிடும்.</div>
-	    </div>
+  <h1>VISHNU'S PAGE</h1>
+      <div class="box"> 
+          <h2>Success has</h2>
+          <h2>No</h2>
+          <h2>Time Limit</h2>
+          <h3>Maha Vishnu</h3>
+          <h3>Web Page creater</h3>
+      </div>
+      <div class="box2">
+          <div class="box1"><h4>motivation</h4>“It is the satisfaction of doing it for yourself and motivating others to work with you in bringing it about. It is about the fun, innovation, creativity with the rewards being far greater than purely financial.”</div>
+          <div class="box1"><h4>life</h4>“The reasonable man adapts himself to the world; the unreasonable one persists in trying to adapt the world to himself. Therefore all progress depends on the unreasonable man.”</div>
+          <div class="box1"><h4>success</h4> பகை, பொறாமை ஆகியவற்றை நீ வெளியிட்டால், அவை வட்டியும் முதலுமாக மீண்டும் உன்னிடமே திரும்பி வந்து சேர்ந்துவிடும்.</div>
+      </div>
+      <div class="social"><a href="https://web.whatsapp.com/"><img src="whatsapp.gif"></a><h4>9524180019</h4></div>
+       <div class="social"><a href="https://goo.gl/WPH8Dg"><img src="facebook.gif"></a><h4>NavaneethanNavaneethan</h4></div>
+      <div class="social"> <a href="https://goo.gl/oPoVTd"><img src="gmail.gif"></a><h4>navaneethavishnu322@gmail.com</h4></div>
+       <div class="social"><a href="https://goo.gl/G2eLne="><img src="contact.gif"></a><h4>9524180019</h4></div>
+       <center><a href="data.html"><button>data</button></a></center>
+       <marquee class="marquee">Devoleped by Navaneetha Maha Vishnu,Computer Science And Engineering</marquee>
 </body>
-<center><a href="data.html"><button class="button">data</button></a></center>
 </html>
