--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    		background-size: cover;
    		
    	}
-    .button {
+     button {
     color: #e2360f;
   background-color: gray;
   font-weight: bold;
