--- a/vishnunew.html
+++ b/vishnunew.html
@@ -105,8 +105,8 @@
           <div class="box1"><h4>life</h4>“The reasonable man adapts himself to the world; the unreasonable one persists in trying to adapt the world to himself. Therefore all progress depends on the unreasonable man.”</div>
           <div class="box1"><h4>success</h4> பகை, பொறாமை ஆகியவற்றை நீ வெளியிட்டால், அவை வட்டியும் முதலுமாக மீண்டும் உன்னிடமே திரும்பி வந்து சேர்ந்துவிடும்.</div>
       </div>
-      <div class="social"><a href="https://web.whatsapp.com/"><img src="whatsapp.gif"></a><h4>9524180019</h4></div>
-       <div class="social"><a href="https://goo.gl/WPH8Dg"><img src="facebook.gif"></a><h4>NavaneethanNavaneethan</h4></div>
+      <div class="social"><a href="https://web.whatsapp.com/"><img src="whatsapp.GIF"></a><h4>9524180019</h4></div>
+       <div class="social"><a href="https://goo.gl/WPH8Dg"><img src="facebook.GIF"></a><h4>NavaneethanNavaneethan</h4></div>
       <div class="social"> <a href="https://goo.gl/oPoVTd"><img src="gmail.gif"></a><h4>navaneethavishnu322@gmail.com</h4></div>
        <div class="social"><a href="https://goo.gl/G2eLne="><img src="contact.gif"></a><h4>9524180019</h4></div>
        <center><a href="data.html"><button>data</button></a></center>
