--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
    		font-size: 80px;
    	}
    	body{
+		background-size: 100%;
    		background-image: url(back1.jpg);
-   		background-size: cover;
    		
    	}
      button {
