--- a/vishnunew.html
+++ b/vishnunew.html
@@ -12,9 +12,9 @@
 <style type="text/css">
   h1{
     opacity: 0.9;
-    color: #2b31db;
+    color: white;
     text-align: center;
-    background-color:  #a83200 ;
+    background-color:  #74a6f7 ;
     background-size: cover;
     font-size: 90px;
     font-family:Algerian;
@@ -59,13 +59,6 @@
     margin-right: 100px;
     font-size: 20px;
     text-align: center;
-  }
-  .box2{
-    height: 400px;
-    opacity: 0.9;
-    background-color:#a83200;
-    border-top: 4px solid black;
-    border-bottom: 4px solid black;
   }
    button {
     color: #e2360f;
