--- a/vishnunew.html
+++ b/vishnunew.html
@@ -75,11 +75,11 @@
    .social{
     color: #1ca4ff;
     display: inline-block;
-    margin:70px 100px 20px 100px;
+    margin:auto;
    }
 .marquee{
-  color: #1ca4ff;
-  background-color: #804000;
+  color: white;
+  background-color:#74a6f7 ;
   font-size: 30px;
 }
 </style>
