--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    		font-size: 80px;
    	}
    	body{
-		background-size: 100%;
+		background-size:cover;
    		background-image: url(back1.jpg);
    		
    	}
