--- a/vishnunew.html
+++ b/vishnunew.html
@@ -55,8 +55,6 @@
     width: 300px;
     border: 3px solid black;
     margin-top:50px;
-    margin-left: 100px;
-    margin-right: 100px;
     font-size: 20px;
     text-align: center;
   }
@@ -75,7 +73,7 @@
    .social{
     color: #1ca4ff;
     display: inline-block;
-    margin:auto;
+    margin:20px 20px 20px 20px;
    }
 .marquee{
   color: white;
