--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
    		font-size: 80px;
    	}
    	body{
-		background-size:cover;
-   		background-image: url(back1.jpg);
-   		
+		background-size:cover;  		
    	}
      button {
     color: #e2360f;
@@ -36,7 +34,7 @@
    }
    </style>
 </head>
-<body>
+<body background="back1.jpg">
 	<h1>Welcome</h1>
 	<h2>To</h2>
 	<h1>Official Page</h1>
