--- a/vishnunew.html
+++ b/vishnunew.html
@@ -55,6 +55,8 @@
     width: 300px;
     border: 3px solid black;
     margin-top:50px;
+     margin-right:30px;
+     margin-left:30px;
     font-size: 20px;
     text-align: center;
   }
