--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
      <head>
            <meta charset="utf-8">
-        <title>e-books</title>
+        <title>official page</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
